<resources>
    <string name="app_name">汕头橄榄台</string>

    <!-- Config -->
    <string name="UMENG_APPKEY">5368adef56240b3e410337a7</string>
    <string name="JPUSH_APPKEY">f0638222933af84af96ecad9</string>

    <!-- News -->
    <string name="str_live">广播电视直播</string>
    <string name="str_vod_01">今日视线</string>
    <string name="str_vod_02">汕头新闻</string>
    <string name="str_vod">点播</string>

    <!-- Hudong -->
    <string name="str_shake_score">摇积分</string>
    <string name="str_shake_live">现场摇</string>
    <string name="str_shake_prize">摇奖品</string>

    <!-- Common -->
    <string name="str_retry">重试</string>
    <string name="str_cancel">取消</string>
    <string name="str_sure">确定</string>
    <string name="str_back_home">返回首页</string>
    <string name="double_click_to_quit">双击返回键,退出汕头橄榄台</string>
    <string name="str_share_format">%s (分享自 @书吧)</string>
    <string name="str_book_shelf">收藏</string>
    <string name="str_book_library">发现</string>
    <string name="str_credit">积分: %s</string>
    <string name="str_me">我</string>
    <string name="str_set">设置</string>
    <string name="str_empty">字符串为空</string>
    <string name="str_intro">简介</string>
    <string name="str_get_sms_code">获取短信验证码</string>
    <string name="str_login_tips">请先登录</string>
    <string name="str_category">类型</string>
    <string name="str_chapter_title" formatted="false">第%s章 %s</string>
    <string name="page_number">Page %1$d of %2$d</string>
    <string name="str_unknow">未知</string>
    <string name="str_book_finish">完结</string>
    <string name="str_book_publishing">连载中</string>
    <string name="str_lagel">加载中...</string>
    <string name="remove_from_bookshelf">取消收藏</string>
    <string name="str_search_hint">请输入搜索内容</string>
    <string name="choose_login_type">请选择登录方式</string>
    <string name="login_desc">登录后同步数据</string>
    <string name="updated">已更新</string>

    <!-- Set -->
    <string name="set_title">设置</string>
    <string name="set_more">更多</string>
    <string name="set_night_model">夜间模式</string>
    <string name="set_save_model">流量控制</string>
    <string name="set_push_message">推送消息</string>
    <string name="set_save_model_summary">仅在WI-FI下加载图片</string>
    <string name="set_legal">免责声明</string>
    <string name="set_recommend">推荐橄榄台</string>
    <string name="set_rating">给橄榄台好评</string>
    <string name="set_user_info">个人资料</string>
    <string name="set_my_friend">我的好友</string>
    <string name="set_message">我的消息</string>
    <string name="set_exchange">兑奖情况</string>
    <string name="set_sign">签到</string>
    <string name="set_signed">已签到</string>
    <string name="set_update">检查版本更新</string>
    <string name="set_version">版本</string>
    <string name="set_logout">退出登陆</string>
    <string name="set_account">用户</string>
    <string name="set_logout_title">退出登陆</string>
    <string name="set_logout_msg">确定退出当前账号?</string>

    <!-- search -->
    <string name="search_recommend">推荐几本精彩的小说</string>

    <!-- Feedback -->
    <string name="feedback_email">qiwenge.dev@gmail.com</string>
    <string name="feedback_subject">意见反馈</string>
    <string name="feedback_content"></string>
    <string name="feedback_chooser_title">意见反馈</string>
    <string name="feedback_hint">意见反馈</string>

    <!-- Update -->
    <string name="update_title">版本更新</string>
    <string name="update_message">发现新版本%s, 是否立即更新?</string>
    <string name="update_sure">立即更新</string>
    <string name="update_cancel">稍后再说</string>
    <string name="update_current_is_latest">当前版本已经为最新版本</string>

    <!-- Read -->
    <string name="reader_normal_model">正常</string>
    <string name="reader_night_model">夜间</string>

    <!-- ActionBar -->
    <string name="action_search">搜索</string>
    <string name="action_search_hint">搜索...</string>
    <string name="action_login">登陆</string>
    <string name="action_setting">设置</string>
    <string name="action_feedback">意见反馈</string>
    <string name="action_more">更多</string>
    <string name="title_activity_feedback">意见反馈</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_send">发送</string>
    <string name="action_share">分享</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Empty -->
    <string name="empty_defualt">加载失败, 请检查您的网络设置</string>
    <string name="empty_bookshelf">无内容~</string>
    <string name="empty_search">没有找到您想要的内容</string>
    <string name="empty_url">链接内容不存在~</string>

    <!--Error-->
    <string name="error_network_unavailable_format">网络不可用 , 请检查您的网络设置</string>
    <string name="error_not_find_market">你没有安装任何电子市场</string>
    <string name="title_activity_login">登录</string>

    <!-- Strings related to login -->
    <string name="prompt_phone">手机号</string>
    <string name="prompt_invite_code">邀请码</string>
    <string name="prompt_verify_code_tips">验证码已经发送到您的手机：</string>
    <string name="prompt_phone_hint">请输入手机号</string>
    <string name="prompt_invite_code_hint">请输入邀请码（可不填）</string>
    <string name="prompt_verify_code">验证码</string>
    <string name="prompt_verify_code_hint">请输入验证码</string>
    <string name="prompt_get_verify_code">重新获取验证码</string>
    <string name="prompt_get_sms_code">获取短信验证码</string>
    <string name="prompt_re_get_time">(%ss)后重新获取</string>
    <string name="action_sign_in">登录</string>
    <string name="action_register">注册</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_phone">请输入正确的手机号</string>
    <string name="error_invalid_vcode">验证码不正确</string>
    <string name="error_invalid_smscode">验证码不正确</string>
    <string name="error_invalid_password">密码长度不符合要求</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="warn_register">立即注册</string>
    <string name="warn_login">立即登录</string>
    <string name="warn_register_content">您的手机号还未注册，是否立即注册？</string>
    <string name="warn_login_content">您的手机号已经注册，是否立即登录？</string>
    <string name="warn_sign_success">恭喜您！获得%s积分！</string>
    <!--提示-->
</resources>
