<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:showAsAction="never" />

    <item
        android:title="@string/action_more" >
        <menu>
            <!-- 单项选择 -->
            <group  android:checkableBehavior="single">
                <!-- 选中红色 -->
                <item android:id="@+id/action_setting"
                    android:checked="true"
                    android:title="@string/action_settings"/>
                <item android:id="@+id/action_feedback"
                    android:title="@string/action_feedback"/>
            </group>
        </menu>
    </item>
</menu>
