<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_second_bg_color"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.xulee.kandota.fragment.LoginFragment">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TextView
            style="@style/ItemMe"
            android:text="@string/prompt_verify_code_tips" />
        <TextView
            android:id="@+id/tv_phone"
            style="@style/ItemMe"
            android:text="000 0000 0000" />
        <View style="@style/Line_horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_password"
                style="@style/ItemLogin"
                android:text="@string/prompt_verify_code" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/prompt_verify_code_hint"
                android:inputType="number"
                android:textColorHint="@color/tv_title_night_color"
                android:textSize="@dimen/font_size_middle" />

            <TextView
                android:id="@+id/tv_get_verify_code"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:background="@drawable/item_theme_bg"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/prompt_get_verify_code"
                android:textColor="@color/action_bar_text_color" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        style="@style/ItemButton"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:enabled="false"
        android:text="@string/action_login" />

</LinearLayout>

