<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_second_bg_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="26dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_bg_color"
            android:orientation="horizontal">


            <LinearLayout
                android:id="@+id/layout_user"
                style="@style/ItemBackaground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/iv_avatar"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_default_avatar" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/default_padding"
                    android:paddingRight="@dimen/default_padding">

                    <TextView
                        android:id="@+id/tv_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/choose_login_type"
                        android:textColor="@color/green"
                        android:textSize="@dimen/font_size_big" />

                    <TextView
                        android:id="@+id/tv_level"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/login_desc"
                        android:textColor="@color/tv_desc_color"
                        android:textSize="@dimen/font_size_small"
                        android:visibility="visible" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@android:color/white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_caching"
                style="@style/ItemMe"
                android:text="@string/set_caching" />
            <TextView
                android:id="@+id/tv_download"
                style="@style/ItemMe"
                android:text="@string/set_download" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@android:color/white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_rating"
                style="@style/ItemMe"
                android:text="@string/set_rating" />

            <TextView
                android:id="@+id/tv_feed_back"
                style="@style/ItemMe"
                android:text="@string/action_feedback" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@android:color/white">

            <TextView
                android:id="@+id/tv_set"
                style="@style/ItemMe"
                android:text="@string/str_set" />
        </LinearLayout>


    </LinearLayout>

</ScrollView>
